# algebraic-path

./: README.md  algebraic-path.cabal  cabal.project  posix-path.cabal
.github/workflows/: build.yaml
src/ast/AlgebraicPath/Ast/: Component.hs  Name.hs  Path.hs
src/ast/AlgebraicPath/Ast/Name/: NameSegment.hs
src/ast/PosixPath/Ast/: Name.hs
src/tests/: Main.hs
src/util/AlgebraicPath/Util/: List.hs  MonadPlus.hs  Prelude.hs
